# pytest-balance-xdist

./: .flake8  .pre-commit-config.yaml  NOTICE.txt  README.md  pyproject.toml
src/: pytest_balance_xdist.py
